moved invisible file upload button. fixes #892

--- a/public/bootstrap/less/trp3.less
+++ b/public/bootstrap/less/trp3.less
@@ -947,6 +947,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#17202a', end
   width: 32px;
   height: 32px;
   overflow: hidden;
+  left: 20px;
 }
 
 .button-choose-avatar input {
